@@ -13,6 +13,10 @@ Xfce 4.6beta2 (Xfce 4.5.92)
   * Add libxfconf perl bindings.
   * Remove xfconf_channel_remove_property() and
     xfconf_channel_remove_properties().
+  * Only treat the XML file under $XDG_CONFIG_HOME as a "user" file,
+    and treat all others as system files.  This fixes the problem where
+    Xfce-installed defaults get read *after* the user's config when
+    Xfce is installed to a user-writable prefix (bug 4592).
 
 
 Xfce 4.6beta1 (Xfce 4.5.91)
